2008-09-03  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number.

=== seahorse 2.23.91 ===

2008-09-03  Stef Walter  <stef@memberwebs.com>

	* README:
	* NEWS: 
	* pkcs11/Makefile.am: Release version 2.23.91

2008-09-01  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-viewer.c:
    * src/seahorse-viewer.vala:
    * src/vala-build.stamp: Fix some more logic.
    * src/seahorse-viewer.c:
    * src/seahorse-viewer.vala:
    * src/vala-build.stamp: Fix copying keys to clipboard.  Fixes bug #550279
    * src/seahorse.desktop.in.in: Remove encoding line.  Fixes bug #550169
    
2008-08-31  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h: 
	* src/seahorse-key-manager.vala: Fix double free. See bug #547918
	
2008-08-31  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-key.c: Fix null pointer dereference. See bug #549603
	
2008-08-31  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* pkcs11/gp11.vapi:
	* pkcs11/gp11-hacks.h: (added)
	* pkcs11/seahorse-pkcs11-certificate.vala: Bump vala dependency, and make 
	build work with latest vala again.
	
2008-08-28  Adam Schreiber  <sadam@clemson.edu>

    * ssh/seahorse-ssh-operation.c: Don't round up to the next highest power of 2
    bytes.  Fixes bug #549747.  Happy Birthday to me :)

2008-08-27  Adam Schreiber  <sadam@clemson.edu>

    * help/seahorse.omf.in: Change series id so that the manual shows up
    * help/C/seahorse.xml: Updated manual.
    * src/vala-build.stamp:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.vala: Don't repetedly load gnome-keyring items.
    Fixes bug #547682

2008-08-26  Adam Schreiber  <sadam@clemson.edu>
    * src/vala-build.stamp:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-results.vala:
    * src/seahorse-keyserver-results.h:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.vala:
    * src/seahorse-viewer.c:
    * src/seahorse-key-manager.h: