@@ -1,3 +1,8 @@
+2008-09-07  Stef Walter  <stef@memberwebs.com>
+
+	* libseahorse/seahorse-key.c: Fill in abstract methods properly
+	on the SeahorseObject class. Fixes crash. 
+	
 2008-09-03  Stef Walter  <stef@memberwebs.com>
 
 	* configure.in: Bump version number.
